Fix Javadoc jar generation for migrated module